--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "amazona",
+  "name": "ecommerce",
   "version": "1.0.0",
-  "description": "Demo : https://amazonaapp.herokuapp.com/",
+  "description": "Web Tech Project",
   "main": "index.js",
   "dependencies": {
     "aws-sdk": "^2.702.0",
@@ -33,14 +33,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/basir/amazona.git"
+    "url": "git+https://github.com/nxmita/ecommerce.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/basir/amazona/issues"
+    "url": "https://github.com/nxmita/ecommerce/issues"
   },
-  "homepage": "https://github.com/basir/amazona#readme",
+  "homepage": "https://github.com/nxmita/ecommerce#readme",
   "engines": {
     "node": "12.4.0",
     "npm": "6.9.0"
