--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce",
+  "name": "quickstore",
   "version": "1.0.0",
   "description": "Web Tech Project",
   "main": "index.js",
